@@ -426,6 +426,7 @@ All (GUI):
 - Improve wxGTK print/page setup dialog (rafravago).
 - Added wxToolbook XRC handler (Andrea Zanellato).
 - Added wxDocManager::FindTemplate() (troelsk).
+- Return bool, not void, from wxImage::ConvertAlphaToMask() (troelsk).
 
 MSW:
 
